--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-azure-maps": "^0.4.5",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.6",
     "typescript": "^4.9.5",
