api endpoints stub

--- a/backend/Rlake.Services/Rlake.Services.csproj
+++ b/backend/Rlake.Services/Rlake.Services.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.Storage.Files.DataLake" Version="12.13.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
+  </ItemGroup>
+
 </Project>
