--- a/backend/Rlake.Api/Rlake.Api.csproj
+++ b/backend/Rlake.Api/Rlake.Api.csproj
@@ -13,8 +13,14 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Rlake.Data\Rlake.Data.csproj" />
+    <ProjectReference Include="..\Rlake.Services\Rlake.Services.csproj" />
   </ItemGroup>
 
 </Project>
