--- a/backend/Rlake.Api/appsettings.json
+++ b/backend/Rlake.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "RabbitMQ": {
+    "Connection": "amqp://guest@localhost:5672"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
