--- a/backend/Rlake.Api/appsettings.json
+++ b/backend/Rlake.Api/appsettings.json
@@ -1,11 +1,15 @@
 {
-  "RabbitMQ": {
+  "RabbitMq": {
     "Connection": "amqp://guest@localhost:5672"
+  },
+  "AzureStorage": {
+    "ConnectionString": "secret",
+    "ContainerName": "raw"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "AllowedHosts": "*",
