integrated with azure service bus added openAI api with the service stub app: nswag client generated

--- a/backend/Rlake.Api/appsettings.json
+++ b/backend/Rlake.Api/appsettings.json
@@ -1,10 +1,20 @@
 {
+  "ConnectionStrings": {
+    "Default": "your_connection_string_here",
+    "ServiceBusConnection": "Endpoint=sb://your-namespace.servicebus.windows.net/;SharedAccessKeyName=your-key-name;SharedAccessKey=your-key"
+  },
   "RabbitMq": {
     "Connection": "amqp://guest@localhost:5672"
   },
   "AzureStorage": {
     "ConnectionString": "secret",
     "ContainerName": "raw"
+  },
+  "Chat": {
+    "OpenAi": {
+      "ApiKey": "secret"
+    },
+    "ServiceBusQueueName": "chat_queue"
   },
   "Logging": {
     "LogLevel": {
