--- a/backend/Rlake.Api/Rlake.Api.csproj
+++ b/backend/Rlake.Api/Rlake.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -12,17 +12,17 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
-    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
+    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.13.1" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Rlake.Data\Rlake.Data.csproj" />
-    <ProjectReference Include="..\Rlake.Services\Rlake.Services.csproj" />
+	<PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
+	<PackageReference Include="Azure.Storage.Blobs" Version="12.15.1" />
+	<PackageReference Include="Azure.Storage.Files.DataLake" Version="12.13.1" />
+	<PackageReference Include="Betalgo.OpenAI.GPT3" Version="6.8.1" />
   </ItemGroup>
 
 </Project>
