--- a/app/.env
+++ b/app/.env
@@ -1,3 +1,3 @@
 REACT_APP_MAPS_KEY=e87XgJ0MpZx370zZK_BlvLPW_w-h_bBrfsr8BNmSn-Y
-#REACT_APP_API_BASE=https://rlake-api.gentlesky-78f8ea63.westeurope.azurecontainerapps.io/
-REACT_APP_API_BASE=http://localhost:5175/
+REACT_APP_API_BASE=https://rlake-api.gentlesky-78f8ea63.westeurope.azurecontainerapps.io
+#REACT_APP_API_BASE=http://localhost:5175
