--- a/backend/Rlake.Api/Properties/launchSettings.json
+++ b/backend/Rlake.Api/Properties/launchSettings.json
@@ -5,8 +5,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "RABBITMQ__CONNECTION": "amqp://dev:Kvz7DWWPZ7vg5wL@rlake-mq.westeurope.cloudapp.azure.com:5672"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5175"
