--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "devDependencies": {
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
