--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
     "bootstrap": "^5.2.3",
+    "cross-env": "^7.0.3",
     "react": "^18.2.0",
     "react-azure-maps": "^0.4.5",
     "react-dom": "^18.2.0",
@@ -23,7 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "set \"CI=false\" && yarn react-scripts build",
+    "build": "cross-env CI=false yarn react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
