--- a/backend/Rlake.Api/appsettings.json
+++ b/backend/Rlake.Api/appsettings.json
@@ -18,7 +18,7 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Information"
     }
   },
