--- a/backend/Rlake.Api/appsettings.json
+++ b/backend/Rlake.Api/appsettings.json
@@ -19,6 +19,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
+      "Microsoft": "Information",
       "Microsoft.AspNetCore": "Information"
     }
   },
