sql db connection added, initial migration created

--- a/backend/Rlake.Api/appsettings.json
+++ b/backend/Rlake.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "your_connection_string_here",
+    "Default": "Server=(localdb)\\MSSQLLocalDB; Database=rlake-v1; Trusted_Connection=True;",
     "ServiceBusConnection": "Endpoint=sb://your-namespace.servicebus.windows.net/;SharedAccessKeyName=your-key-name;SharedAccessKey=your-key"
   },
   "RabbitMq": {
