--- a/backend/Rlake.Api/Rlake.Api.csproj
+++ b/backend/Rlake.Api/Rlake.Api.csproj
@@ -21,15 +21,21 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.2" />
+    <PackageReference Include="Azure.Identity" Version="1.8.2" />
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.13.1" />
+    <PackageReference Include="Azure.Storage.Files.Shares" Version="12.13.1" />
+    <PackageReference Include="Azure.Storage.Queues" Version="12.13.1" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.32.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="7.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Azure" Version="1.6.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.5" />
 	<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
@@ -37,7 +43,7 @@
 	<PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
 	<PackageReference Include="Azure.Storage.Blobs" Version="12.15.1" />
 	<PackageReference Include="Azure.Storage.Files.DataLake" Version="12.13.1" />
-	<PackageReference Include="Betalgo.OpenAI.GPT3" Version="6.8.1" />
+	<PackageReference Include="Betalgo.OpenAI.GPT3" Version="6.8.3" />
   </ItemGroup>
 
 </Project>
