--- a/.github/workflows/RlakeFunctionApp.yml
+++ b/.github/workflows/RlakeFunctionApp.yml
@@ -5,7 +5,7 @@ on:
     - main
 env:
   AZURE_FUNCTIONAPP_NAME: RlakeFunctionApp
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: services/RlakeFunctionApp/.
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: services/RlakeFunctionApp/
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 6.0.x
   WORKING_DIRECTORY: services/RlakeFunctionApp
