--- a/.github/workflows/RlakeFunctionApp.yml
+++ b/.github/workflows/RlakeFunctionApp.yml
@@ -13,7 +13,8 @@ env:
   AZURE_APIM_SERVICENAME: RlakeApi
   AZURE_APIM_API_ID: RlakeFunctionApp
   AZURE_APIM_RESOURCE_PATH: /rlake
-  AZURE_APIM_SWAGGERURL: ${{ vars.AZURE_APIM_SWAGGERURL_FUNCAPP }}
+  AZURE_APIM_SWAGGERURL: ${{ vars.AZURE_APIM_SWAGGERURL }}
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -38,6 +39,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+    - name: Debug variables
+      run: |
+        echo "vars : ${{ vars.AZURE_APIM_SWAGGERURL_FUNCAPP }}"
+        echo "vars2 : ${{ vars.AZURE_APIM_SWAGGERURL }}"
+        echo "sec : ${{ secrets.AZURE_APIM_SWAGGERURL }}"
+        echo "env : ${{ env.AZURE_APIM_SWAGGERURL }}"
+        echo "variable from shell environment : $AZURE_APIM_SWAGGERURL"
+        
     - name: Download artifact from build job
       uses: actions/download-artifact@v3
       with:
