--- a/.github/workflows/RlakeFunctionApp.yml
+++ b/.github/workflows/RlakeFunctionApp.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
     - main
+ 
 env:
   AZURE_FUNCTIONAPP_NAME: RlakeFunctionApp
   AZURE_FUNCTIONAPP_PACKAGE_PATH: services/RlakeFunctionApp/
@@ -13,7 +14,7 @@ env:
   AZURE_APIM_SERVICENAME: RlakeApi
   AZURE_APIM_API_ID: RlakeFunctionApp
   AZURE_APIM_RESOURCE_PATH: /rlake
-  AZURE_APIM_SWAGGERURL: ${{ vars.AZURE_APIM_SWAGGERURL }}
+  #AZURE_APIM_SWAGGERURL: ${{ vars.AZURE_APIM_SWAGGERURL }}
   
 jobs:
   build:
@@ -37,7 +38,10 @@ jobs:
         path: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build    
+    environment: main
+    env:
+      AZURE_APIM_SWAGGERURL: ${{ vars.AZURE_APIM_SWAGGERURL }}
     steps:
     - name: Debug variables
       run: |
