--- a/.github/workflows/RlakeFunctionApp.yml
+++ b/.github/workflows/RlakeFunctionApp.yml
@@ -14,7 +14,7 @@ env:
   AZURE_APIM_SERVICENAME: RlakeApi
   AZURE_APIM_API_ID: RlakeFunctionApp
   AZURE_APIM_RESOURCE_PATH: /rlake
-  #AZURE_APIM_SWAGGERURL: ${{ vars.AZURE_APIM_SWAGGERURL }}
+  #AZURE_APIM_SWAGGERURL: "${{ vars.AZURE_APIM_SWAGGERURL }}"
   
 jobs:
   build:
